--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -10,6 +10,18 @@ jobs:
   test:
     name: Test pgfast
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:18
+        env:
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     env:
       PYTHONPATH: ${{ github.workspace }}
     steps:
@@ -31,7 +43,7 @@ jobs:
       - name: type checking
         run: uv run --dev ty check
       - name: Run tests
-        run: uv run --dev pytest -v
+        run: uv run --dev pytest -n auto -v
 
   release:
     name: Release pgfast
