--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,13 @@ requires = ["uv_build>=0.9.9,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["httpx>=0.28.1", "pgfast", "ruff>=0.14.5", "ty>=0.0.1a26"]
+dev = [
+    "httpx>=0.28.1",
+    "pgfast",
+    "pytest-xdist>=3.8.0",
+    "ruff>=0.14.5",
+    "ty>=0.0.1a26",
+]
 
 [tool.uv.workspace]
 members = ["."]
