--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -14,7 +14,9 @@ jobs:
       postgres:
         image: postgres:18
         env:
-          POSTGRES_HOST_AUTH_METHOD: trust
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: pgfast
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -44,8 +46,9 @@ jobs:
         run: uv run --dev ty check
       - name: Run tests
         env:
-            TEST_DATABASE_URL: postgres://postgres@localhost:5432/pgfast
-        run: uv run --dev pytest -n auto -v
+            TEST_DATABASE_URL: postgres://postgres:postgres@localhost:5432/pgfast
+        # run: uv run --dev pytest -n auto -v
+        run: uv run --dev pytest -v
 
   release:
     name: Release pgfast
