--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -47,8 +47,7 @@ jobs:
       - name: Run tests
         env:
             TEST_DATABASE_URL: postgres://postgres:postgres@localhost:5432/pgfast
-        # run: uv run --dev pytest -n auto -v
-        run: uv run --dev pytest -v
+        run: uv run --dev pytest -n auto -v
 
   release:
     name: Release pgfast
