--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,7 @@ authors = [
     { name = "Marius Räsener", email = "931919+elmcrest@users.noreply.github.com" },
 ]
 requires-python = ">=3.14"
-dependencies = [
-    "asyncpg>=0.30.0",
-    "fastapi>=0.121.2",
-    "pytest>=9.0.1",
-    "pytest-asyncio>=1.3.0",
-    "pytest-cov>=7.0.0",
-    "typer>=0.20.0",
-]
+dependencies = ["asyncpg>=0.30.0", "fastapi>=0.121.2"]
 
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -56,6 +49,9 @@ dev = [
     "pytest-xdist>=3.8.0",
     "ruff>=0.14.5",
     "ty>=0.0.1a26",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
 ]
 
 [tool.uv.workspace]
