--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -47,7 +47,12 @@ jobs:
       - name: Run tests
         env:
             TEST_DATABASE_URL: postgres://postgres:postgres@localhost:5432/pgfast
-        run: uv run --dev pytest -n auto -v
+        run: uv run --dev pytest -v --cov --cov-branch --cov-report=xml
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: elmcrest/pgfast
 
   release:
     name: Release pgfast
